Actualizado un par de cosas del home y añadido sección de Error

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@ body{
 
       background-image: linear-gradient(
         to bottom,
-        #343a41 0%,  
-        #2c3136 20%,
+        #40444b 0%,  
+        #25292d 30%,
         #282d32 40%,
         #21252a 60%,
         #282c31 80%,
