Página  de usuario añadido

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,4 +96,12 @@ html{
 button[aria-label="close"] {
 color: white;
 }
+.gradient{
+/*
+* Created with https://www.css-gradient.com
+* Gradient link: https://www.css-gradient.com/?c1=7b8da7&c2=4e6389&gt=r&gd=dtl
+*/
+background: #7B8DA7;
+background: radial-gradient(at left top, #7B8DA7, #4E6389);
+}
 
