--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,14 @@
 @tailwind utilities;
 
 
-h1, p, a, button, h2, h3{
-  font-family: var(--font-kumbh);
+h1, p, a, button, h2, h3, h5 ::placeholder, tr, td, th, span, li, label{
+  font-family: 'Kumbh Sans', sans-serif;
+}
+h6 {
+  font-family: 'Arial', sans-serif;
+}
+h6 span{
+  font-family: 'Arial', sans-serif;
 
 }
 body{
